# cpp_ai_roadmap

./: .gitignore  README.md
01_basics/: README.md  helloagainc++.cpp  main.cpp
02_memory/: README.md  memory_demo.cpp  model_state_demo.cpp
03_oop/: README.md  layer_demo  layer_demo.cpp
04_image_processing/: CMakeLists.txt  ImageEngine.cpp  ImageEngine.h  README.MD  capture_main.cpp  main.cpp
05_libtorch_intro/: Blueprint-make_cuda_work_for_C++.txt  CMakeLists.txt  README.md  device_math.cpp  tensor_basics.cpp
06_image_to_tensor/: CMakeLists.txt  README.md  image_to_tensor.cpp
07_model_inference/: CMakeLists.txt  README.md  export_model.py  export_yolo.py  model_inference.cpp  object_detection.cpp
08_video_stream_inference/: CMakeLists.txt  README.md  video_detection.cpp
